--- a/YumFun/YumFun/Views/Base.lproj/Main.storyboard
+++ b/YumFun/YumFun/Views/Base.lproj/Main.storyboard
@@ -337,23 +337,114 @@
             </objects>
             <point key="canvasLocation" x="3791" y="2395"/>
         </scene>
-        <!--View Controller-->
+        <!--Timer View Controller-->
         <scene sceneID="hfU-sn-HHL">
             <objects>
-                <viewController id="Odn-I4-7jb" sceneMemberID="viewController">
+                <viewController id="Odn-I4-7jb" customClass="TimerViewController" customModule="YumFun" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sph-tn-nJq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nid-VG-Ex8">
-                                <rect key="frame" x="0.0" y="463" width="375" height="204"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nid-VG-Ex8">
+                                <rect key="frame" x="0.0" y="413" width="375" height="254"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="254" id="LJw-bS-r9m"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aOf-a8-YwC">
+                                <rect key="frame" x="133" y="164" width="112" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="j4b-zp-eYM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step #: Step Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQE-OR-GaN">
+                                <rect key="frame" x="86" y="354" width="202" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="cfT-kq-MXU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Juq-sJ-q3p">
+                                <rect key="frame" x="206" y="490" width="100" height="100"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Y8v-dk-MPF"/>
+                                    <constraint firstAttribute="height" constant="100" id="siV-MZ-NYP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="pauseTapped:" destination="Odn-I4-7jb" eventType="touchUpInside" id="mke-Mj-pbp"/>
+                                    <action selector="startTapped:" destination="Odn-I4-7jb" eventType="touchUpInside" id="teu-JJ-Kdg"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JJy-N1-r8p">
+                                <rect key="frame" x="69" y="490" width="100" height="100"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="qSv-1a-CHG"/>
+                                    <constraint firstAttribute="width" constant="100" id="u2n-gD-HtJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Reset"/>
+                                <connections>
+                                    <action selector="resetTapped:" destination="Odn-I4-7jb" eventType="touchUpInside" id="fzZ-sD-2t7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g99-KZ-O2R">
+                                <rect key="frame" x="318" y="413" width="41" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="FOG-On-Qfd"/>
+                                </constraints>
+                                <state key="normal" image="micOff"/>
+                                <connections>
+                                    <action selector="mic_on_offWith_sender:" destination="Odn-I4-7jb" eventType="touchUpInside" id="q5G-st-cDZ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ebH-qe-WMv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Nid-VG-Ex8" firstAttribute="top" secondItem="xQE-OR-GaN" secondAttribute="bottom" constant="29" id="0T6-6L-kTu"/>
+                            <constraint firstItem="Nid-VG-Ex8" firstAttribute="top" secondItem="xQE-OR-GaN" secondAttribute="bottom" constant="29" id="33F-Uz-1e2"/>
+                            <constraint firstItem="Juq-sJ-q3p" firstAttribute="leading" secondItem="JJy-N1-r8p" secondAttribute="trailing" constant="37" id="82E-ol-tnI"/>
+                            <constraint firstItem="Nid-VG-Ex8" firstAttribute="bottom" secondItem="ebH-qe-WMv" secondAttribute="bottom" id="Ddy-PU-6ez"/>
+                            <constraint firstItem="ebH-qe-WMv" firstAttribute="trailing" secondItem="xQE-OR-GaN" secondAttribute="trailing" constant="87" id="JLT-dq-j9T"/>
+                            <constraint firstItem="Nid-VG-Ex8" firstAttribute="leading" secondItem="ebH-qe-WMv" secondAttribute="leading" id="Ka5-ny-Lv5"/>
+                            <constraint firstItem="xQE-OR-GaN" firstAttribute="top" secondItem="aOf-a8-YwC" secondAttribute="bottom" constant="120" id="MyN-hl-XM5"/>
+                            <constraint firstItem="ebH-qe-WMv" firstAttribute="bottom" secondItem="JJy-N1-r8p" secondAttribute="bottom" constant="77" id="NLL-9O-tck"/>
+                            <constraint firstItem="Juq-sJ-q3p" firstAttribute="leading" secondItem="JJy-N1-r8p" secondAttribute="trailing" constant="37" id="Uf1-aX-R67"/>
+                            <constraint firstItem="aOf-a8-YwC" firstAttribute="leading" secondItem="ebH-qe-WMv" secondAttribute="leading" constant="133" id="bh6-I3-q5K"/>
+                            <constraint firstItem="xQE-OR-GaN" firstAttribute="top" secondItem="aOf-a8-YwC" secondAttribute="bottom" constant="120" id="bus-Jk-I3B"/>
+                            <constraint firstItem="aOf-a8-YwC" firstAttribute="top" secondItem="ebH-qe-WMv" secondAttribute="top" constant="120" id="cxv-2S-LJq"/>
+                            <constraint firstItem="xQE-OR-GaN" firstAttribute="leading" secondItem="ebH-qe-WMv" secondAttribute="leading" constant="86" id="dQ6-Ue-PQH"/>
+                            <constraint firstItem="JJy-N1-r8p" firstAttribute="top" secondItem="xQE-OR-GaN" secondAttribute="bottom" constant="106" id="e6x-Ar-c7G"/>
+                            <constraint firstItem="g99-KZ-O2R" firstAttribute="leading" secondItem="ebH-qe-WMv" secondAttribute="leading" constant="318" id="fFR-09-5jh"/>
+                            <constraint firstItem="ebH-qe-WMv" firstAttribute="trailing" secondItem="Juq-sJ-q3p" secondAttribute="trailing" constant="69" id="fGd-wV-h7l"/>
+                            <constraint firstItem="g99-KZ-O2R" firstAttribute="top" secondItem="ebH-qe-WMv" secondAttribute="top" constant="369" id="fIh-kj-4f0"/>
+                            <constraint firstItem="Juq-sJ-q3p" firstAttribute="top" secondItem="xQE-OR-GaN" secondAttribute="bottom" constant="106" id="gjS-uw-XRu"/>
+                            <constraint firstItem="Nid-VG-Ex8" firstAttribute="trailing" secondItem="ebH-qe-WMv" secondAttribute="trailing" id="lrU-Jm-yZP"/>
+                            <constraint firstItem="JJy-N1-r8p" firstAttribute="leading" secondItem="ebH-qe-WMv" secondAttribute="leading" constant="69" id="mfL-kX-Pkm"/>
+                            <constraint firstItem="ebH-qe-WMv" firstAttribute="trailing" secondItem="g99-KZ-O2R" secondAttribute="trailing" constant="16" id="nC1-Ie-hYu"/>
+                            <constraint firstItem="ebH-qe-WMv" firstAttribute="bottom" secondItem="Juq-sJ-q3p" secondAttribute="bottom" constant="77" id="sl5-cV-ZBT"/>
+                            <constraint firstItem="ebH-qe-WMv" firstAttribute="bottom" secondItem="g99-KZ-O2R" secondAttribute="bottom" constant="210" id="zgD-0L-exC"/>
+                            <constraint firstItem="ebH-qe-WMv" firstAttribute="trailing" secondItem="aOf-a8-YwC" secondAttribute="trailing" constant="130" id="zn1-rQ-2Ff"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Fh5-oY-XBj"/>
+                    <connections>
+                        <outlet property="resetButton" destination="JJy-N1-r8p" id="kCg-qY-v58"/>
+                        <outlet property="startAndpauseButton" destination="Juq-sJ-q3p" id="cXO-DC-Xfn"/>
+                        <outlet property="timerLabel" destination="aOf-a8-YwC" id="cJI-2K-T4Q"/>
+                        <outlet property="voiceButton" destination="g99-KZ-O2R" id="68f-j0-gc4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EiX-Ly-mTC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1291,7 +1382,7 @@
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" reuseIdentifier="DiscoverTextCell" translatesAutoresizingMaskIntoConstraints="NO" id="JPt-cl-3HB" customClass="DiscoverTextCell" customModule="YumFun" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DiscoverTextCell" translatesAutoresizingMaskIntoConstraints="NO" id="JPt-cl-3HB" customClass="DiscoverTextCell" customModule="YumFun" customModuleProvider="target">
                                         <rect key="frame" x="20" y="20" width="335" height="280"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="S9Z-4s-mf1">
@@ -1502,6 +1593,7 @@
         <image name="flavors-of-youth.gif" width="540" height="304"/>
         <image name="magnifyingglass.circle" catalog="system" width="128" height="121"/>
         <image name="mascot" width="1920" height="1440"/>
+        <image name="micOff" width="300" height="300"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="person.2" catalog="system" width="128" height="81"/>
         <image name="plus.app" catalog="system" width="128" height="114"/>
@@ -1526,6 +1618,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
