--- a/YumFun/YumFun/Views/Base.lproj/Main.storyboard
+++ b/YumFun/YumFun/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jsN-ey-ux2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V7z-LN-XeG">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -151,7 +151,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2560.8000000000002" y="93.103448275862078"/>
+            <point key="canvasLocation" x="810" y="-824"/>
         </scene>
         <!--Custom Tab Bar View Controller-->
         <scene sceneID="DXS-i8-gOn">
@@ -171,7 +171,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FBh-k5-kD3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1235" y="900"/>
+            <point key="canvasLocation" x="1335" y="721"/>
         </scene>
         <!--Discover-->
         <scene sceneID="XCI-vG-BDz">
@@ -232,7 +232,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kj3-TO-JBF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="810.39999999999998" y="81.409295352323838"/>
+            <point key="canvasLocation" x="810" y="-71"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cl7-6b-TD7">
@@ -250,7 +250,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N1r-XV-0Td" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1652" y="93.103448275862078"/>
+            <point key="canvasLocation" x="-57" y="-824"/>
         </scene>
         <!--Me-->
         <scene sceneID="kVz-ED-oLt">
@@ -448,7 +448,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EiX-Ly-mTC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1116" y="119.1904047976012"/>
+            <point key="canvasLocation" x="2727" y="-72"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ida-c2-Iih">
@@ -466,7 +466,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ndk-wt-foJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-100" y="81.409295352323838"/>
+            <point key="canvasLocation" x="-57" y="-72"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="3ZG-su-mNF">
@@ -550,7 +550,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9kj-Mq-bCs" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="oEX-Rj-OL8"/>
             </objects>
-            <point key="canvasLocation" x="1621.7391304347827" y="-560.49107142857144"/>
+            <point key="canvasLocation" x="2727" y="-824"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ra2-Ot-GdR">
@@ -568,7 +568,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VfA-En-rOe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="713" y="-560"/>
+            <point key="canvasLocation" x="1815" y="-827"/>
         </scene>
         <!--Me-->
         <scene sceneID="6lF-y7-qqc">
@@ -1382,7 +1382,7 @@
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DiscoverTextCell" translatesAutoresizingMaskIntoConstraints="NO" id="JPt-cl-3HB" customClass="DiscoverTextCell" customModule="YumFun" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" reuseIdentifier="DiscoverTextCell" translatesAutoresizingMaskIntoConstraints="NO" id="JPt-cl-3HB" customClass="DiscoverTextCell" customModule="YumFun" customModuleProvider="target">
                                         <rect key="frame" x="20" y="20" width="335" height="280"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="S9Z-4s-mf1">
@@ -1583,7 +1583,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GbS-9g-7lx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2055.1999999999998" y="119.1904047976012"/>
+            <point key="canvasLocation" x="1815" y="-72"/>
         </scene>
     </scenes>
     <resources>
