--- a/YumFun/YumFun/Views/Cooking.storyboard
+++ b/YumFun/YumFun/Views/Cooking.storyboard
@@ -577,32 +577,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Left" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hkv-En-qdt">
-                                <rect key="frame" x="127" y="224" width="160" height="70"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DZF-OZ-lyn">
+                                <rect key="frame" x="0.0" y="576" width="414" height="320"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="6aC-bz-fbN"/>
+                                    <constraint firstAttribute="height" constant="320" id="45z-Tq-KGj"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step #: Step Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w7i-Df-tQm">
-                                <rect key="frame" x="86" y="524" width="241" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="xkW-4o-0D9"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYl-DJ-ghf">
                                 <rect key="frame" x="86" y="674" width="95" height="95"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="95" id="4gQ-S1-0ki"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="95" id="arb-2F-1c3"/>
-                                    <constraint firstAttribute="width" constant="95" id="i9x-ge-mt8"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Reset"/>
                                 <connections>
@@ -623,8 +607,8 @@
                                 <rect key="frame" x="232" y="674" width="95" height="95"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="95" id="XvG-3F-lgy"/>
-                                    <constraint firstAttribute="width" constant="95" id="uru-xZ-zie"/>
+                                    <constraint firstAttribute="width" constant="95" id="Ghp-jN-MRI"/>
+                                    <constraint firstAttribute="height" constant="95" id="XXI-rj-juH"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Start">
@@ -635,38 +619,36 @@
                                     <action selector="startTapped:" destination="2UN-yV-bHO" eventType="touchUpInside" id="3TI-5O-Ror"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DZF-OZ-lyn">
-                                <rect key="frame" x="0.0" y="576" width="414" height="320"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnj-kS-XaF">
+                                <rect key="frame" x="174" y="247" width="67" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Lkn-PO-Xvs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Lkn-PO-Xvs" firstAttribute="trailing" secondItem="aca-cv-hzM" secondAttribute="trailing" constant="20" id="5L4-49-jpc"/>
                             <constraint firstItem="aca-cv-hzM" firstAttribute="leading" secondItem="Lkn-PO-Xvs" secondAttribute="leading" constant="339" id="8MW-PJ-uLF"/>
-                            <constraint firstItem="Lkn-PO-Xvs" firstAttribute="trailing" secondItem="Hkv-En-qdt" secondAttribute="trailing" constant="127" id="8wg-Em-Yxb"/>
-                            <constraint firstItem="w7i-Df-tQm" firstAttribute="leading" secondItem="Lkn-PO-Xvs" secondAttribute="leading" constant="86" id="9cD-tq-zbx"/>
-                            <constraint firstItem="Lkn-PO-Xvs" firstAttribute="trailing" secondItem="w7i-Df-tQm" secondAttribute="trailing" constant="87" id="Hja-as-8vP"/>
-                            <constraint firstItem="zYl-DJ-ghf" firstAttribute="top" secondItem="w7i-Df-tQm" secondAttribute="bottom" constant="120" id="LV7-6Q-DXt"/>
-                            <constraint firstItem="Hkv-En-qdt" firstAttribute="leading" secondItem="Lkn-PO-Xvs" secondAttribute="leading" constant="127" id="Lk4-BY-Uus"/>
-                            <constraint firstItem="Lkn-PO-Xvs" firstAttribute="trailing" secondItem="poP-gU-K9J" secondAttribute="trailing" constant="87" id="SHB-DO-siF"/>
-                            <constraint firstItem="w7i-Df-tQm" firstAttribute="top" secondItem="Hkv-En-qdt" secondAttribute="bottom" constant="230" id="Tdk-Kh-ei0"/>
-                            <constraint firstItem="zYl-DJ-ghf" firstAttribute="leading" secondItem="Lkn-PO-Xvs" secondAttribute="leading" constant="86" id="WTV-IA-6Hs"/>
-                            <constraint firstItem="poP-gU-K9J" firstAttribute="leading" secondItem="zYl-DJ-ghf" secondAttribute="trailing" constant="51" id="YpZ-3O-ziH"/>
-                            <constraint firstItem="zYl-DJ-ghf" firstAttribute="leading" secondItem="Lkn-PO-Xvs" secondAttribute="leading" constant="86" id="eB3-wB-hX6"/>
-                            <constraint firstItem="poP-gU-K9J" firstAttribute="top" secondItem="w7i-Df-tQm" secondAttribute="bottom" constant="120" id="ime-XL-2m4"/>
+                            <constraint firstItem="poP-gU-K9J" firstAttribute="leading" secondItem="zYl-DJ-ghf" secondAttribute="trailing" constant="51" id="ALA-Yi-fOV"/>
+                            <constraint firstItem="Lkn-PO-Xvs" firstAttribute="trailing" secondItem="poP-gU-K9J" secondAttribute="trailing" constant="87" id="CB6-Fn-xBc"/>
+                            <constraint firstItem="poP-gU-K9J" firstAttribute="width" secondItem="zYl-DJ-ghf" secondAttribute="width" id="D9u-gw-jfT"/>
+                            <constraint firstItem="DZF-OZ-lyn" firstAttribute="trailing" secondItem="Lkn-PO-Xvs" secondAttribute="trailing" id="E1c-Ec-Jqj"/>
+                            <constraint firstItem="poP-gU-K9J" firstAttribute="height" secondItem="zYl-DJ-ghf" secondAttribute="height" id="Fsx-I4-HxA"/>
+                            <constraint firstItem="DZF-OZ-lyn" firstAttribute="leading" secondItem="Lkn-PO-Xvs" secondAttribute="leading" id="V3q-nw-qFE"/>
+                            <constraint firstItem="poP-gU-K9J" firstAttribute="baseline" secondItem="zYl-DJ-ghf" secondAttribute="baseline" id="V9F-AL-bUB"/>
+                            <constraint firstAttribute="bottom" secondItem="DZF-OZ-lyn" secondAttribute="bottom" id="Zq1-8z-Dg4"/>
                             <constraint firstItem="aca-cv-hzM" firstAttribute="top" secondItem="Lkn-PO-Xvs" secondAttribute="top" constant="546" id="me7-fb-K7i"/>
-                            <constraint firstItem="zYl-DJ-ghf" firstAttribute="top" secondItem="w7i-Df-tQm" secondAttribute="bottom" constant="120" id="qGe-kG-IIh"/>
-                            <constraint firstItem="poP-gU-K9J" firstAttribute="leading" secondItem="zYl-DJ-ghf" secondAttribute="trailing" constant="51" id="qJh-ER-e3U"/>
-                            <constraint firstItem="Hkv-En-qdt" firstAttribute="top" secondItem="Lkn-PO-Xvs" secondAttribute="top" constant="180" id="xgg-Eu-f9x"/>
+                            <constraint firstItem="Lkn-PO-Xvs" firstAttribute="bottom" secondItem="poP-gU-K9J" secondAttribute="bottom" constant="93" id="nmP-J1-zaT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="CaF-12-tRr"/>
                     <connections>
                         <outlet property="resetButton" destination="zYl-DJ-ghf" id="nQn-FC-tZo"/>
                         <outlet property="startAndpauseButton" destination="poP-gU-K9J" id="cjY-if-Rkh"/>
-                        <outlet property="timerLabel" destination="Hkv-En-qdt" id="A85-xR-CBZ"/>
+                        <outlet property="timerLabel" destination="fnj-kS-XaF" id="XFQ-3w-LkY"/>
                         <outlet property="voiceButton" destination="aca-cv-hzM" id="2Q4-2H-0l9"/>
                     </connections>
                 </viewController>
